--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
     "dependencies": {
-      "body-parser": "^1.20.2",
-      "dotenv": "^16.3.1",
-      "express": "^4.18.2",
-      "mongoose": "^7.5.2",
-      "node-telegram-bot-api": "^0.63.0",
-      "path": "^0.12.7"
+        "body-parser": "^1.20.2",
+        "dotenv": "^16.3.1",
+        "express": "^4.18.2",
+        "mongoose": "^7.5.2",
+        "multer": "^1.4.5-lts.1",
+        "node-telegram-bot-api": "^0.63.0",
+        "path": "^0.12.7"
     }
 }
